--- a/wear/src/main/res/layout/activity_main.xml
+++ b/wear/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
 		android:id="@+id/container"
-		tools:context="com.sbproduction.listmaker.MainActivity"
+		tools:context="com.sbproduction.listmaker.activities.MainActivity"
 		tools:deviceIds="wear">
 
 	<TextView
